--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
             <h1>w3schools</h1>
             <button>Log in</button>
         </div>
+        <!---navigation--->
+        <nav>
+            <div class='media-bar'>
+                <i class='fa fa-bars'></i>
+            </div>
+            <div class='navigation-left'>
+                <ul>
+                    <li class='tutorial-scrol'>Tutorials <i class='fas fa-caret-down'></i>
+                        <div class='tutorials'>
+                            
+                        </div>
+                    </li>
+                    <li>References <i class='fas fa-caret-down'></i></li>
+                    <li>Examples <i class='fas fa-caret-down'></i></li>
+                </ul>
+            </div>
+            <div class='navigation-right'>
+                <i class='fa fa-yin-yang'></i>
+                <i class='fas fa-globe-africa'></i>
+                <i class='fas fa-search'></i>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
