--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <!--Html & Css -->
                             <div id='html-css'>
                                 <h1>HTML and CSS</h1>
-                                <div class='html&css-w3'>
+                                <div class='html-css-w3'>
                                     <h3>Learn HTML</h3>
                                     <h3>Learn CSS</h3>
                                     <h3>Learn Bootstrap</h3>
@@ -73,11 +73,22 @@
                             <div id='programming-tutorial'>
                                 <h1>Programming</h1>
                                 <div class='programming-w3'>
-                                    <h3>Learn Pythoh</h3>
+                                    <h3>Learn Python</h3>
                                     <h3>Learn Java</h3>
                                     <h3>Learn C++</h3>
                                     <h3>Learn C#</h3>
                                     <h3>Learn Machine Learning</h3>
+                                </div>
+                            </div>
+                            <!--Server side -->
+                            <div id='server-side-tutorial'>
+                                <h1>Server Side</h1>
+                                <div class='server-side-w3'>
+                                    <h3>Learn SQL</h3>
+                                    <h3>Learn PHP</h3>
+                                    <h3>Learn ASP</h3>
+                                    <h3>Learn Node.js</h3>
+                                    <h3>Learn Raspberry pi</h3>
                                 </div>
                             </div>
                         </div>
