--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li class='tutorial-scrol'>Tutorials <i class='fas fa-caret-down'></i>
                         <div class='tutorials'>
                             <!--Html & Css -->
+                            <a class='close' href='./index.html'><i class='fas fa-times-circle'></i></a>
                             <div id='html-css'>
                                 <h1>HTML and CSS</h1>
                                 <div class='html-css-w3'>
