--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel='stylesheet' href='./stylesheets/font.css'>
    <link rel='stylesheet' href='./stylesheets/style.css'>
-   <link rel='stylesheet' href='./stylesheets/fontawesome-free-5.14.0-web/css/all.css'>
+   <link rel='stylesheet' href='./stylesheets/fontawesome-free-5.14.0-web/css/all.min.css'>
 </head>
 <body> 
     <header>
