--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
    <meta charset="utf-8">
-   <title>w3school demo</title>
+   <title>Clone w3school (Demo) using HTML & CSS</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel='stylesheet' href='./stylesheets/font.css'>
-   <link rel='stylesheet' href='./stylesheets/style.css'>
+   <link rel='stylesheet' href='./stylesheets/header.css'>
+   <meta name=”robots” content="index, follow">
+   <meta http-equiv="refresh" content="2;url=sachindusahan.github.io/w3school-demo/" />
+   <meta name="google-site-verification" content="plIuC9YBKFGBoMlN2A1m-lx1w3C-BLDHA_ZJnlG5KBw" />
+   <meta name="keywords" content="w3school clone,Flex,  CSS, Html">
    <link rel='stylesheet' href='./stylesheets/fontawesome-free-5.14.0-web/css/all.min.css'>
+   <meta name="description" content= "w3school website demo clone CSS & HTML best practices">
 </head>
 <body> 
     <header>
@@ -94,7 +99,20 @@
                             </div>
                         </div>
                     </li>
-                    <li>References <i class='fas fa-caret-down'></i></li>
+                    <li id='reference-li'>References <i class='fas fa-caret-down'></i>
+                        <div class='references'><!---->
+                            <div id=''>
+                                <h1></h1>
+                                <div class=''>
+                                    <h3></h3>
+                                    <h3></h3>
+                                    <h3></h3>
+                                    <h3></h3>
+                                    <h3></h3>
+                                </div>
+                            </div>
+                        </div><!---->
+                    </li>
                     <li>Examples <i class='fas fa-caret-down'></i></li>
                 </ul>
             </div>
@@ -105,5 +123,9 @@
             </div>
         </nav>
     </header>
+    <div class='main'>
+        <h1>Hello</h1>
+    </div>
+    
 </body>
 </html>
