--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel='stylesheet' href='./stylesheets/font.css'>
    <link rel='stylesheet' href='./stylesheets/header.css'>
+    <link rel='stylesheet' href='./stylesheets/main.css'>
    <meta name="keywords" content="w3school clone,Flex,  CSS, Html">
    <link rel='stylesheet' href='./stylesheets/fontawesome-free-5.14.0-web/css/all.min.css'>
    <meta name="description" content= "w3school website demo clone CSS & HTML best practices">
@@ -261,6 +262,5 @@
             </div>
         </nav>
     </header>
-    
 </body>
 </html>
