--- a/index.html
+++ b/index.html
@@ -262,5 +262,34 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class='side-bar'>
+            <div class='side-1'>
+                <h3>HTML And CSS</h3>
+                <h4>Learn HTML</h4>
+                <h4>Learn CSS</h4>
+                <h4>Learn Bootstrap</h4>
+                <h4>Learn W3.CSS</h4>
+                <h4>Learn Colors</h4>
+                <h4>Learn Icons</h4>
+                <h4>Learn Graphics</h4>
+                <h4>Learn How To</h4>
+                <h4>Learn Sass</h4>
+            </div>
+            <div class='side-2'>
+                <h3>JavaScript</h3>
+                <h4>Learn JavaScript</h4>
+                <h4>Learn jQuery</h4>
+                <h4>Learn React</h4>
+                <h4>Learn AngularJS</h4>
+                <h4>Learn JSON</h4>
+                <h4>Learn AJAX</h4>
+                <h4>Learn W3.JS</h4>
+            </div>
+        </div>
+        <div class='container'>
+        
+        </div>
+    </main>
 </body>
 </html>
