--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </header>
     <main>
         <div class='side-bar'>
-            <div class='side-1'>
+            <div class='side side-1'>
                 <h3>HTML And CSS</h3>
                 <h4>Learn HTML</h4>
                 <h4>Learn CSS</h4>
@@ -276,7 +276,7 @@
                 <h4>Learn How To</h4>
                 <h4>Learn Sass</h4>
             </div>
-            <div class='side-2'>
+            <div class='side side-2'>
                 <h3>JavaScript</h3>
                 <h4>Learn JavaScript</h4>
                 <h4>Learn jQuery</h4>
@@ -286,10 +286,74 @@
                 <h4>Learn AJAX</h4>
                 <h4>Learn W3.JS</h4>
             </div>
+             <div class='side side-3'>
+                <h3>Server Side</h3>
+                <h4>Learn SQL</h4>
+                <h4>Learn PHP</h4>
+                <h4>Learn ASP</h4>
+                <h4>Learn Node.js</h4>
+                <h4>Learn Raspberry Pi</h4>
+            </div>
+            <div class='side side-4'>
+                <h3>Programming</h3>
+                <h4>Learn Python</h4>
+                <h4>Learn Java</h4>
+                <h4>Learn C++</h4>
+                <h4>Learn C#</h4>
+                <h4>Learn Machine Learning</h4>
+            </div>
+            <div class='side side-5'>
+                <h3>Web Building</h3>
+                <h4>Web Templates</h4>
+                <h4>Web Statistics</h4>
+                <h4>Web Certificates</h4>
+                <h4>Web Editor</h4>
+                <h4>Web Development</h4>
+                <h4>Test Your Typing Speed</h4>
+            </div>
+            <div class='side side-6'>
+                <h3>XML Tutorials</h3>
+                <h4>Learn XML</h4>
+                <h4>Learn XML AJAX</h4>
+                <h4>Learn XML DOM</h4>
+                <h4>Learn XML DTD</h4>
+                <h4>Learn XML Schema</h4>
+                <h4>Learn XSLT</h4>
+                <h4>Learn XSLT</h4>
+                <h4>Learn XQuery</h4>
+            </div>
+            <div class='side side-7'>
+                <h3>References</h3>
+                <h4>HTML Reference</h4>
+                <h4>CSS Reference</h4>
+                <h4>JS Reference</h4>
+                <h4>SQL Reference</h4>
+                <h4>PHP Reference</h4>
+                <h4>jQuery Reference</h4>
+                <h4>Python Reference</h4>
+                <h4>Bootstrap 3 Reference</h4>
+                <h4>Bootstrap 4 Reference</h4>
+                <h4>W3.CSS Reference</h4>
+                <h4>Java Reference</h4>
+                <h4>Angular Reference</h4>
+                <h4>Sass Reference</h4>
+                <h4>UTF-8 Reference</h4>
+            </div>
+            <div class='side side-8'>
+                <h3>Exercises</h3>
+                <h4>HTML Exercises</h4>
+                <h4>CSS Exercises</h4>
+                <h4>JavaScript Exercises</h4>
+                <h4>SQL Exercises</h4>
+                <h4>PHP Exercises</h4>
+                <h4>Python Exercises</h4>
+                <h4>Java Exercises</h4>
+                <h4>C++ Exercises</h4>
+                <h4>C# Exercises</h4>
+                <h4>Bootstrap Exercises</h4>
+            </div>
         </div>
-        <div class='container'>
         
-        </div>
     </main>
 </body>
 </html>
