--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@
                 <h4>Bootstrap Exercises</h4>
             </div>
         </div>
+        <div class='right_side'>
+            <div class='right__1'>
+                <h1>HTML</h1>
+                <p>The language for building web pages</p>
+            </div>
+        </div>
         
     </main>
 </body>
