--- a/index.html
+++ b/index.html
@@ -357,6 +357,18 @@
             <div class='right__1'>
                 <h1>HTML</h1>
                 <p>The language for building web pages</p>
+                <div class='btn'>
+                    <button>LEARN HTML</button>
+                    <button>HTML REFERENCE</button>
+                </div>
+            </div>
+            <div class='top-box-1'>
+               <h1>HTML Example:</h1> 
+               <div class='compile'>
+                   <div class='inside-compile'>
+                   
+                   </div>
+               </div>
             </div>
         </div>
         
