--- a/index.html
+++ b/index.html
@@ -366,7 +366,21 @@
                <h1>HTML Example:</h1> 
                <div class='compile'>
                    <div class='inside-compile'>
-                   
+                       <code class='blue'>&lt;</code><code class='brown'>!DOCTYPE</code>&nbsp;&nbsp;<code class='red'>html</code>&nbsp;<code class='blue'>&gt;</code><br>
+                       <code class='blue'>&lt;</code><code class='brown'>html</code><code class='blue'>&gt</code><br>
+                       <code class='blue'>&lt;</code><code class='brown'>title</code><code class='blue'>&gt</code>
+                       <code>HTML Tutorial</code>
+                       <code class='blue'>&lt;/</code><code class='brown'>title</code><code class='blue'>&gt</code><br>
+                       <code class='blue'>&lt;</code><code class='brown'>body</code><code class='blue'>&gt</code><br><br>
+                       <code class='blue'>&lt;</code><code class='brown'>h1</code><code class='blue'>&gt</code>
+                       <code>This is a heading</code>
+                       <code class='blue'>&lt;/</code><code class='brown'>h1</code><code class='blue'>&gt</code><br>
+                       <code class='blue'>&lt;</code><code class='brown'>p</code><code class='blue'>&gt</code>
+                       <code>This is a paragraph</code>
+                       <code class='blue'>&lt;/</code><code class='brown'>p</code><code class='blue'>&gt</code><br><br>
+                       <code class='blue'>&lt;/</code><code class='brown'>body</code><code class='blue'>&gt</code><br>
+                       <code class='blue'>&lt;/</code><code class='brown'>html</code><code class='blue'>&gt</code><br>
+                       
                    </div>
                </div>
             </div>
