--- a/index.html
+++ b/index.html
@@ -398,7 +398,21 @@
                        </div>
                    </div>
                </div>
-               <!--<button></button>-->
+               <button class='try-btn'>Try it Yourself »</button>
+            </div>
+            
+            <div class='right__2'>
+                <div class='css-compile'>
+                    <h1>CSS</h1>
+                    <p>The language for styling web pages</p>
+                    <div class='button'>
+                        <button>LEARN CSS</button>
+                        <button>CSS REFERENCE</button>
+                    </div>
+                </div>
+                <div class='top-box-2'>
+                    <h1>CSS Example</h1>
+                </div>
             </div>
         </div>
         
