--- a/index.html
+++ b/index.html
@@ -413,6 +413,11 @@
                 <div class='top-box-2'>
                     <h1>CSS Example</h1>
                 </div>
+                <div class='compile'>
+                    <div class='inside-compile'>
+                        <!--css example-->
+                    </div>
+                </div>
             </div>
         </div>
         
