css examples Editing

--- a/index.html
+++ b/index.html
@@ -415,7 +415,8 @@
                 </div>
                 <div class='compile'>
                     <div class='inside-compile'>
-                        <!--css example-->
+                        <!--CSS COMPILE EDIT-->
+                        <code></code>
                     </div>
                 </div>
             </div>
