--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8">
    <title>w3school clone</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
    <link rel='stylesheet' href='./stylesheets/font.css'>
    <link rel='stylesheet' href='./stylesheets/header.css'>
     <link rel='stylesheet' href='./stylesheets/main.css'>
@@ -504,6 +504,13 @@
                 <button style='margin-left:25px;' id='js-try-btn' class='try-btn'>Try it Yourself »</button>
                 
                 
+            </div>
+            <div class='section'>
+               <div class='py-section'>
+                  <h1>Python</h1>
+                  <p>A programming language</p>
+                  <button>LEARN PYTHON</button>
+               </div>
             </div>
         </div>
     </main>
