--- a/index.html
+++ b/index.html
@@ -511,6 +511,34 @@
                   <p>A programming language</p>
                   <button>LEARN PYTHON</button>
                </div>
+               <div class='py-section'>
+                  <h1>jQuery</h1>
+                  <p>A JavaScript library for developing web pages</p>
+                  <button>LEARN JQUERY</button>
+               </div>
+               <div class='py-section'>
+                  <h1>Java</h1>
+                  <p>A programming language</p>
+                  <button>LEARN JAVA</button>
+               </div>
+               <div class='py-section'>
+                  <h1>PHP</h1>
+                  <p>A web server programming language</p>
+                  <button>LEARN PHP</button>
+               </div>
+               
+            </div>
+            <div class='class_div'>
+               <h1>W3.CSS</h1>
+               <p>A modern CSS framework for faster and better responsive web pages</p>
+               <button>LEARN W3.CSS</button>
+               <h2>Color Picker</h2>
+               <img class='color-picker' src='./img/colorpicker.png'>
+               <h3>Bootstrap</h3>
+               <p>A CSS framework for designing better web pages</p>
+               <div class='btn'>
+                  <button>LEARN BOOTSTRAP 3</button><button>LEARN BOOTSTRAP 4</button>
+               </div>
             </div>
         </div>
     </main>
