--- a/index.html
+++ b/index.html
@@ -540,7 +540,17 @@
                   <button>LEARN BOOTSTRAP 3</button><button>LEARN BOOTSTRAP 4</button>
                </div>
             </div>
-        </div>
+            <div class='exercises'>
+               <h1>Exercises</h1>
+               <p>Test yourself with exercises</p>
+               <div id='div-1'>
+                  <button>HTML Exercises</button><button>CSS Exercises</button><button>JS Exercises</button>
+               </div>
+                <div id='div-2'>
+                   <button>SQL</button><button>Python</button><button>PHP</button><button>jQuery</button><button>Java</button>
+               </div>
+            </div>
+       </div>
     </main>
 </body>
 </html>
