--- a/index.html
+++ b/index.html
@@ -550,6 +550,55 @@
                    <button>SQL</button><button>Python</button><button>PHP</button><button>jQuery</button><button>Java</button>
                </div>
             </div>
+            <div class='portf'>
+               <div class='top'>
+                   <h1>Web Templates</h1>               
+               </div>
+               <div class='sub'>
+                   <p>Browse our selection of <b>free</b> responsive html templates</p>
+               </div>
+               <div class='img'>
+                   <img src='./img/w3css_templates.jpg'>
+               </div>
+               <div class='button'>
+                   <button>BROWSE TEMPLATES</button>
+               </div>
+            </div>
+            <div class='last'>
+                <div class='div-1'>
+                    <h1>How To Section</h1>
+                </div>
+                <div class='div-2'>
+                    <p>Code snippets for HTML, CSS and JavaScript</p>
+                </div>
+                <div class='div-3'>
+                    <button>LEARN HOW TO</button>
+                </div>
+                <div class='last-2'>
+                    <div class='div-5'>
+                        <img src='./img/getcertified.jpg'>
+                        <h1>Web Certificates</h1>
+                        <button>Get Certified»</button>
+                        <h2>Get Certified in HTML,CSS and JavaScript</h2>
+                        <button>Get Certified»</button>
+                    </div>
+                   <div class='div-6'>
+                        <button>CERTIFICATES</button><button>QUIZZES</button><button>EXERCISES</button>
+                   </div>
+                    <div class='div-7'>
+                        <p>F O R U M | A B O U T</p>
+                    </div>
+                    <div class='div-8'>
+                        <p>W3Schools is optimized for learning, testing, and training. Examples might be simplified to improve reading and basic understanding. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.Copyright 1999-2020 by Refsnes Data. All Rights Reserved.</p>
+                    </div>
+                    <div class='div-9'>
+                        <i class='like'></i>
+                    </div>
+                    <div class='div-10'>
+                        <button>W3SCHOOLS SHOP</button>
+                    </div>
+                </div>
+            </div>
        </div>
     </main>
 </body>
